<resources>
    <string name="app_name">PorkyBank</string>
    <string name="title_productos">Productos</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_pagos">Pagos</string>
    <string name="title_activity_login_main">LoginMainActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo_app">Logo PorkyBank</string>
    <string name="username_login">Usuario:</string>
    <string name="password_login">Contraseña:</string>
    <string name="cant_access_login"><u>¿No puedes acceder?</u></string>
    <string name="face_access_text"><u>Accede mostrando tu cara</u></string>
    <string name="face_access_logo_content">face access logo</string>
    <string name="recupera_claves_titulo">¿Con que usuario quieres acceder?</string>
    <string name="recupera_claves_DNI">DNI</string>
    <string name="recupera_claves_Email">Email</string>
    <string name="recupera_claves_img_desc_dni">Imagen DNI</string>
    <string name="recupera_claves_img_desc_email">Imagen Email</string>
    <string name="flecha">Imagen de flecha</string>
    <string name="recupera_claves_titulo_header">Recuperar claves</string>
    <string name="img_desc_equis">Imagen equis</string>
    <string name="recupera_email_titulo">Introduce la direccion de correo con la que estas registrado en PorkyBank</string>
    <string name="continuar">Continuar</string>
    <string name="recuperar_dni_campo1">¿Con que documento te vas a identificar?</string>
    <string name="recuperar_dni_hint_editText_documento">NIE o NIF/DNI completo con numeros y letras</string>
    <string name="recuperar_dni_campo2">Introduce los 6 ultimos digitos de tu tarjeta</string>
    <string name="recupera_dni_digitos">6 ultimo digitos</string>
    <string name="welcome">welcome</string>
    <string name="invalid_password">invalid password\n</string>
    <string name="bizum">Bizum</string>
    <string name="logo_bizum">logo bizum</string>
    <string name="transacciones">Transacciones</string>
    <string name="logo_transacciones">logo transacciones</string>
    <string name="contratar_prestamo">Contratar préstamo</string>
    <string name="logo_prestamo">logo prestamo</string>
    <string name="oficinas_y_cajeros">Oficinas y cajeros</string>
    <string name="logo_cajero">logo cajero</string>
    <string name="nombre_usuario_completo">CARLOS PEREZ MARTIN</string>
    <string name="logo_cerrar_sesion">logo cerrar sesion</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="fecha_atras">fecha atras</string>
    <string name="boton_prestamos">boton prestamos</string>
    <string name="boton_hipotecas">boton hipotecas</string>
    <string name="boton_nomina">boton nomina</string>
    <string name="boton_tarjetas">boton tarjetas</string>
    <string name="hipoteca_dato1">No bonificada (TIN: 3,85% y TAE: 4,336%)</string>
    <string name="hipoteca_dato2">Pídela 100% online</string>
    <string name="hipoteca_dato3">Financia hasta el 80% de tu nueva casa</string>
    <string name="hipoteca_dato4">La TAE bonificada es el índice que nos va a indicar mejor lo que pagaremos por la hipoteca bonificada. Comparando la TAE y la TAE bonificadas de una misma hipoteca, podemos valorar si las bonificaciones que nos ofrece el banco realmente nos interesan o no. la TAE bonificada es el índice que nos va a indicar mejor lo que pagaremos por la hipoteca bonificada. Comparando la TAE y la TAE bonificadas de una misma hipoteca, podemos valorar si las bonificaciones que nos ofrece el banco realmente nos interesan o no.</string>
    <string name="hipoteca_dato5">Hipoteca fija</string>
    <string name="logo_mas">logo mas</string>
    <string name="imagen_hipoteca">imagen hipoteca</string>
    <string name="imagen_nomina">imagen nomina</string>
    <string name="nomina_dato1">Traer nómina</string>
    <string name="nomina_dato2">¿Cuál es el importe neto de tu nómina al mes?</string>
    <string name="nomina_dato3">Introduce el importe (neto) que recibes cada mes</string>
    <string name="finalizar">Finalizar</string>
    <string name="imagen_cuantina_nomina">imagen cuantina nomina</string>
    <string name="pretamo_dato1">¿Cuánto dinero necesitas?</string>
    <string name="prestamo_dato3">Puedes solicitar hasta un máximo de 30.000€</string>
    <string name="solicitar">Solicitar</string>
    <string name="pedir_tarjeta">Pedir Tarjeta</string>
    <string name="tarjeta_dato2">MyPorkyCard crédito</string>
    <string name="tarjeta_dato4">Pago a crédito, pero on visión débito de tus compras</string>
    <string name="tarjeta_dato5">Permite fraccionar compras</string>
    <string name="tarjeta_dato6">Sacar dinero a débito sin comisiones</string>
    <string name="productos_main_dato1">Catálogo de productos</string>
    <string-array name="documents_types">
        <item>Tipo de documento</item>
        <item>DNI</item>
        <item>NIE</item>
        <item>TIE</item>
    </string-array>
</resources>