<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">



    <TextView
        android:id="@+id/txt_porkybank"
        android:layout_width="181dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="76dp"
        android:layout_height="66dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_logo_porkybank"
        android:contentDescription="@string/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="346dp"
        android:layout_height="355dp"
        android:background="@drawable/custom_border"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/username_login"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="259dp"
            android:layout_height="48dp"
            android:layout_gravity="clip_horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginTop="120dp"
            android:text="@string/password_login"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="260dp"
            android:layout_height="48dp"
            android:layout_gravity="clip_horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginTop="150dp"
            android:autofillHints=""
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/login"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="220dp"
            android:layout_marginBottom="0dp"
            android:backgroundTint="@color/button_color"
            android:enabled="true"
            android:text="@string/action_sign_in"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="300dp"
            android:text="@string/cant_access_login"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="clickTextView5"/>

    </FrameLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="76dp"
        android:text="@string/face_access_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="clickTextView6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="47dp"
        android:layout_height="44dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/face_access_logo_content"
        android:src="@drawable/faceid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>